--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,11 @@
 {
+	"prettier/prettier": [
+		"error",
+		{
+			"singleQuote": true,
+			"parser": "flow"
+		}
+	],
 	"singleQuote": false,
 	"trailingComma": "all",
 	"tabWidth": 4,
