--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/typeorm": "^10.0.0",
+		"@types/bcryptjs": "^2.4.6",
+		"bcryptjs": "^2.4.3",
 		"pg": "^8.11.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.8.1",
