--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/typeorm": "^10.0.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/passport-jwt": "^4.0.1",
 		"bcryptjs": "^2.4.3",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
