--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^10.0.0",
-		"@nestjs/config": "^3.0.0",
+		"@nestjs/config": "^3.2.3",
 		"@nestjs/core": "^10.0.0",
 		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/mapped-types": "*",
@@ -35,6 +35,7 @@
 		"@types/bcryptjs": "^2.4.6",
 		"@types/passport-jwt": "^4.0.1",
 		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.4.5",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
