--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 		"@types/bcryptjs": "^2.4.6",
 		"@types/passport-jwt": "^4.0.1",
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.5",
+		"jwt-decode": "^4.0.0",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
