--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "jest --config ./test/jest-e2e.json",
-		"typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
-		"migration:generate": "npm run typeorm -- migration:generate",
-		"migration:run": "npm run typeorm -- migration:run",
-		"migration:revert": "npm run typeorm -- migration:revert"
+		"typeorm": "typeorm-ts-node-commonjs",
+		"migration:generate": "npm run typeorm -- migration:generate -d src/data-source.ts",
+		"migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
+		"migration:revert": "npm run typeorm -- migration:revert -d src/data-source.ts"
 	},
 	"dependencies": {
 		"@nestjs/common": "^10.0.0",
