--- a/package.json
+++ b/package.json
@@ -31,12 +31,18 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/terminus": "^10.2.3",
+		"@nestjs/throttler": "^6.3.0",
 		"@nestjs/typeorm": "^10.0.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/cookie-parser": "^1.4.8",
 		"@types/passport-jwt": "^4.0.1",
 		"bcryptjs": "^2.4.3",
-		"cookie-parser": "^1.4.6",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
+		"cookie-parser": "^1.4.7",
 		"dotenv": "^16.4.5",
+		"helmet": "^8.0.0",
 		"jwt-decode": "^4.0.0",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
